--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -18,13 +18,12 @@
         <ImageView
             android:id="@+id/logo"
             android:src="@drawable/logo_vector"
-            android:layout_width="40pt"
-            android:paddingBottom="@dimen/dimen_20dp"
-            android:layout_height="40dp"
+            android:layout_width="80pt"
+            android:paddingBottom="10dp"
+            android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:layout_above="@id/title2"/>
+            android:layout_marginTop="40dp"/>
 
 
         <TextView
@@ -115,7 +114,7 @@
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:background="#FFF"
-                        android:alpha=".7"
+                        android:alpha="0.8"
                         app:layout_constraintStart_toEndOf="@id/guideline1"
                         app:layout_constraintEnd_toStartOf="@id/user_mobile"
                         app:layout_constraintBottom_toBottomOf="@id/user_mobile"/>
@@ -149,17 +148,46 @@
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_checkbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_enter_phone_number"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/get_started_btn">
+
+            <CheckBox
+                android:id="@+id/checkbox_tcs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:buttonTint="@color/colorPrimary"
+                android:minWidth="0dp"/>
+                <TextView
+                    android:id="@+id/text_tcs_dialog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/checkbox_text"
+                    android:textSize="13sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:clickable="true"
+                    android:focusable="true"/>
+            </LinearLayout>
             <Button
                 android:id="@+id/get_started_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginBottom="25dp"
                 android:background="@drawable/round_button_dark_green"
                 android:text="Sign Up"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textAllCaps="false"
-                app:layout_constraintTop_toBottomOf="@id/layout_enter_phone_number"
+                android:enabled="false"
+                android:clickable="false"
+                app:layout_constraintTop_toBottomOf="@id/layout_checkbox"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/layout_signin"/>
@@ -169,8 +197,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
                 android:gravity="center_horizontal"
-                app:layout_constraintBottom_toTopOf="@id/app_terms_services"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/get_started_btn">
@@ -195,76 +224,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/app_terms_services"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal"
-                android:text="@string/app_terms_services"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/t_and_cs_layout"
-                app:layout_constraintTop_toBottomOf="@id/layout_signin"/>
 
-            <RelativeLayout
-                android:id="@+id/t_and_cs_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="20dp">
-
-                <TextView
-                    android:id="@+id/text_terms_of_service"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:ellipsize="end"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:text="Terms of Services"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/text_and"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@id/text_terms_of_service"
-                    android:layout_toRightOf="@id/text_terms_of_service"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:paddingStart="6dp"
-                    android:paddingEnd="6dp"
-                    android:text="and"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/text_privacy_policy"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/text_and"
-                    android:layout_toRightOf="@+id/text_and"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="Privacy Policy"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
