--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -93,13 +93,14 @@
                             android:id="@+id/title3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="An Easy app to manage all your payment, Shopping and finance related needs"
+                            android:text="A simple, swift and secure way to make payments, and access quick and affordable working capital"
                             android:textColor="@color/colorPrimary"
                             android:textSize="14sp"
                             android:layout_below="@id/title2"
                             android:layout_marginStart="25dp"
                             android:layout_marginEnd="25dp"
                             android:layout_marginBottom="10dp"/>
+
                         <Button
                             android:id="@+id/get_started_btn"
                             android:layout_width="match_parent"
