--- a/app/src/main/res/layout/layout_coming_soon.xml
+++ b/app/src/main/res/layout/layout_coming_soon.xml
@@ -82,13 +82,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="30dp"
-            android:text="Buy, sell &amp; Grow with hassle free loans"
+            android:text="Buy, sell &amp; grow with hassle free loans"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            android:maxLines="3"
+            android:maxLines="4"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
