--- a/app/src/main/res/layout/user_summary_details.xml
+++ b/app/src/main/res/layout/user_summary_details.xml
@@ -21,7 +21,7 @@
             <LinearLayout
                 android:id="@+id/layout_add_money"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:background="@drawable/top_rounded_blue">
 
@@ -40,6 +40,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_user_profile_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -74,13 +75,13 @@
                 </LinearLayout>
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.2dp"
+                    android:layout_height="1dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@color/colorPrimary"
-                    android:alpha=".79"
+                    android:background="#31244A"
+                    android:alpha=".05"
                     android:visibility="visible"/>
                 <LinearLayout
                     android:layout_height="wrap_content"
@@ -109,13 +110,13 @@
                 </LinearLayout>
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.2dp"
+                    android:layout_height="1dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@color/colorPrimary"
-                    android:alpha=".79"
+                    android:background="#31244A"
+                    android:alpha=".05"
                     android:visibility="visible"/>
                 <LinearLayout
                     android:layout_height="wrap_content"
@@ -144,13 +145,13 @@
                 </LinearLayout>
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.2dp"
+                    android:layout_height="1dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@color/colorPrimary"
-                    android:alpha=".79"
+                    android:background="#31244A"
+                    android:alpha=".05"
                     android:visibility="visible"/>
                 <LinearLayout
                     android:layout_height="wrap_content"
@@ -179,15 +180,20 @@
                 </LinearLayout>
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.2dp"
+                    android:layout_height="1dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
-                    android:background="@color/colorPrimary"
-                    android:alpha=".79"
+                    android:background="#31244A"
+                    android:alpha=".05"
                     android:visibility="visible"/>
             </LinearLayout>
+
+
+
+
+
 
             <LinearLayout
                 android:id="@+id/filter_dialog_footer"
@@ -227,7 +233,8 @@
                     android:background="@drawable/rectangular_blue_solid"
                     android:gravity="center"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_marginEnd="5dp"
+                    />
 
             </LinearLayout>
         </LinearLayout>
