--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -109,19 +109,20 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/layout_visa"
                     android:layout_width="150dp"
                     android:layout_height="90dp"
                     android:padding="8dp"
                     android:layout_weight="0.3"
                     android:background="@color/white"
-                    android:onClick="openAddMoneyVisa"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:focusable="true">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:onClick="openAddMoneyVisa"
                         android:src="@drawable/visa" />
 
                 </LinearLayout>
