--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -191,6 +191,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/layout_signin"/>
+            <TextView
+                android:id="@+id/text_btn"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="25dp"
+                android:enabled="false"
+                android:clickable="false"
+                app:layout_constraintTop_toBottomOf="@id/layout_checkbox"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/layout_signin"/>
 
             <RelativeLayout
                 android:id="@+id/layout_signin"
