--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -377,7 +377,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/view_merchant_card">
+            app:layout_constraintTop_toBottomOf="@id/view_merchant_card"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/image_visa_card"
@@ -615,7 +616,8 @@
             android:layout_marginTop="15dp"
             android:background="#31244A"
             android:alpha=".1"
-            app:layout_constraintTop_toBottomOf="@id/layout_bank_card" />
+            app:layout_constraintTop_toBottomOf="@id/layout_bank_card"
+            android:visibility="gone"/>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
