--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -155,7 +155,7 @@
                         android:background="@drawable/rectangular_blue_solid"
                         android:orientation="horizontal">
 
-                        <AutoCompleteTextView
+                        <Spinner
                             android:id="@+id/sp_bank"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -229,10 +229,12 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -284,6 +286,7 @@
 
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
