--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -19,11 +19,12 @@
             android:id="@+id/logo"
             android:src="@drawable/logo_vector"
             android:layout_width="80pt"
-            android:paddingBottom="10dp"
-            android:layout_height="80dp"
-            android:layout_alignParentTop="true"
+            android:paddingBottom="20dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginTop="40dp"
+            android:layout_above="@id/title2"
+            android:maxHeight="100dp"/>
 
 
         <TextView
@@ -186,6 +187,9 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textAllCaps="false"
+                    android:enabled="false"
+                    android:clickable="true"
+                    android:focusable="true"
                     app:layout_constraintTop_toBottomOf="@id/layout_checkbox"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
