--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -21,13 +21,14 @@
             android:layout_width="138.88pt"
             android:paddingBottom="@dimen/dimen_20dp"
             android:layout_height="140dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/layout_app_emaisha_pay"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_app_emaisha_pay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/logo">
+            android:layout_centerInParent="true">
 
             <TextView
                 android:id="@+id/logo_title1"
