--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -117,7 +117,8 @@
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:clickable="true"
-                    android:focusable="true">
+                    android:focusable="true"
+                    android:onClick="openAddMoneyVisa">
 
                     <ImageView
                         android:layout_width="match_parent"
