--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Hello John,"
+                android:text="Hello Username,"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -640,7 +640,7 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="UGX 0.0"
+                android:text="UGX 0"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -827,7 +827,7 @@
                     android:id="@+id/text_credit_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="John Kiwanuka"
+                    android:text="Name"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     android:gravity="center"
@@ -837,7 +837,7 @@
                     android:id="@+id/text_amount_credit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="+ UGX 10,200"
+                    android:text="+ UGX 0"
                     android:textColor="#30DB51"
                     android:textSize="15sp"
                     android:layout_margin="2dp"
@@ -847,7 +847,7 @@
                     android:id="@+id/date_credit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="24 Feb 2021 14:23 PM"
+                    android:text=" "
                     android:textColor="@color/colorPrimary"
                     android:textSize="10sp"
                     android:layout_margin="2dp"
@@ -902,7 +902,7 @@
                     android:id="@+id/text_debit_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="John Kiwanuka"
+                    android:text="Name"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     android:gravity="center"
@@ -912,7 +912,7 @@
                     android:id="@+id/text_amount_debit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="- UGX 10,200"
+                    android:text="- UGX 0"
                     android:textColor="#FF5353"
                     android:textSize="15sp"
                     android:layout_margin="2dp"
@@ -922,7 +922,7 @@
                     android:id="@+id/date_debit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="24 Feb 2021 14:23 PM"
+                    android:text=" "
                     android:textColor="@color/colorPrimary"
                     android:textSize="10sp"
                     android:layout_margin="2dp"
@@ -966,7 +966,7 @@
             android:layout_below="@id/text_popular_products"
             android:layout_alignParentBottom="true">
 
-            <ImageView
+            <com.glide.slider.library.SliderLayout
                 android:id="@+id/product_cover_slider"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
@@ -974,9 +974,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/background_round_white"
-                android:src="@drawable/slider_image"
-                android:scaleType="fitXY"/>
+                app:indicator_visibility="visible"/>
 
         </LinearLayout>
         <LinearLayout
